# project-hub

./: README.md
project-hub-api/: client.py  database_connection.py  dev-database.conf  docker-compose.yaml  init_db.sql  main.py  pyproject.toml  run_db_scripts.txt
project-hub-api/scripts/: __init__.py  scripts.py
project-hub-frontend/: README.md  package-lock.json  package.json
project-hub-frontend/src/: App.vue  main.js
project-hub-frontend/src/components/: CardFieldEdition.vue  CardModal.vue  CustomModal.vue  CustomSelect.vue  DashboardScreen.vue  EditableText.vue  EditionScreen.vue  MainScreen.vue  NavBar.vue  RoadmapScreen.vue
project-hub-frontend/src/js/: api.js  router.js
